Preparation for migration to Java 12/Tomcat 9.
Some major changes as part of this release.
1) Pulled out the JCA/JNI setup code.
2) Removed the finalize method from EPICS_V3_PV; hopefully this was
never needed.
3) Removed python nature from project.
4) Upgraded the BPLTaglet for Java 12. Post Java 9, the Taglet API has
changed significantly.
5) Changes to the Tomcat setup file for Tomcat 9. This is principally
used for unit tests.
6) Several JAR upgrades were forced on us. The main one is Guava